--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 
 .ipynb_checkpoints/BGE Bill Data Extraction 1 -checkpoint.ipynb
+.ipynb_checkpoints/BGE Bill Data Extraction-checkpoint.ipynb
+.ipynb_checkpoints/BGE Bill Data Extraction-checkpoint.ipynb
+.ipynb_checkpoints/BGE Bill Data Extraction-checkpoint.ipynb
