Updating BGE Bill Extraction.ipynb

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 .ipynb_checkpoints/BGE Bill Data Extraction-checkpoint.ipynb
 .ipynb_checkpoints/BGE Bill Data Extraction-checkpoint.ipynb
 .ipynb_checkpoints/BGE Bill Data Extraction-checkpoint.ipynb
+.ipynb_checkpoints/BGE Bill Data Extraction-checkpoint.ipynb
